issue-37 restore expand/collapse of permits

--- a/app/components/businessType-list.component.css
+++ b/app/components/businessType-list.component.css
@@ -71,9 +71,9 @@
 }
 .selected-business-category-column{
     overflow-y: auto;
-    max-height: 1000px; 
+    max-height: 1000px;
 }
-.selected-business-category-column .ul {    
+.selected-business-category-column .ul {
     list-style-type: none;
     margin-right: -20px;
 }
@@ -81,7 +81,7 @@
     z-index: 1;
     border:none;
     font-size: 1.2rem;
-    padding: 4px 4px 4px 4px;  
+    padding: 4px 4px 4px 4px;
     width: auto;
     font-family: 'Work Sans', sans-serif;
     font-weight: 500;
@@ -95,12 +95,12 @@
 .bp-types-permits{
     overflow-y: auto;
     overflow-x: hidden;
-    height: 1000px;    
+    height: 1000px;
     padding: 5px 5px 15px 5px;
 }
 .bp-business-type {
     padding-bottom: 10px;
-} 
+}
 .business-type-values {
     padding-top: 10px;
     border-top: 1px solid gray;
@@ -108,7 +108,7 @@
     font-size: 1.1em;
     color: #2d6ae2;
 }
-.bp-permit {} 
+.bp-permit {}
 .bp-permit-name {
     color: gray;
 }
@@ -125,7 +125,7 @@
 .bp-category-title-icon{
     color: #2d6ae2;
     padding-left: 10%;
-    font-size: 1.3rem;    
+    font-size: 1.3rem;
 }
 .bp-category-icon.fa-chevron-right:before {
     font-size: .9rem;
@@ -133,4 +133,23 @@
 }
 .permit-url{
     text-decoration:underline;
+}
+
+.business-type-title::after {
+    display: inline-block;
+    vertical-align: middle;
+    position: absolute;
+    top: -3px;
+    right: -15px;
+    font-family: "FontAwesome";
+    content: '\f107';
+    color: #7b7b7b;
+}
+.business-type-title {
+    cursor: pointer;
+    position: relative;
+}
+.business-type-title.collapsed::after {
+    cursor: pointer;
+    content: '\f105';
 }
